// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InfoTooltip rendering renders expected elements 1`] = `
<button
  aria-label="Text"
  className="InfoTooltip"
>
  <Information />
</button>
`;

exports[`InfoTooltip rendering renders expected elements when className is set 1`] = `
<button
  aria-label="Text"
  className="InfoTooltip TestClass"
  id="test"
>
  <Information />
</button>
`;
